fixed bug with wrong fonts, wrong canvas width

--- a/css/main.css
+++ b/css/main.css
@@ -408,7 +408,6 @@
     height: 350px;
     position: relative;
     cursor: pointer;
-    border-radius: 13px;
     margin: 20px 20px;
     border: 3px solid transparent;
     z-index: 10;
